--- a/etc/cinder/cinder.conf.sample
+++ b/etc/cinder/cinder.conf.sample
@@ -220,6 +220,13 @@
 # allowed per project (integer value)
 #quota_gigabytes=1000
 
+# Number of volume backups allowed per project (integer value)
+#quota_backups=10
+
+# Total amount of storage, in gigabytes, allowed for backups
+# per project (integer value)
+#quota_backup_gigabytes=1000
+
 # number of seconds until a reservation expires (integer
 # value)
 #reservation_expire=86400
